# test_mono

./: Makefile  README.md  enclib.i  example.c  runtime.cs  runtimer.cs
rustprj/: Cargo.toml  build.rs  lib.rs
