[package]
name = "enclib"
version = "0.1.0"
authors = ["Anssi Eteläniemi <anssi.etelaniemi@confidex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cbindgen = "0.9.*"

[lib]
name = "enclib"
crate-type = ["cdylib"]